# faking-time-demo

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
faking_time_demo/: constants.py  main.py
tests/: test_last_day.py
