[tool.poetry]
name = "faking-time-demo"
version = "0.1.0"
description = ""
authors = ["acirtep <acirtep>"]
readme = "README.md"
packages = [{include = "faking_time_demo"}]

[tool.poetry.dependencies]
python = "3.11"
typer = "^0.7.0"
pytz = "^2023.2"


[tool.poetry.group.dev.dependencies]
freezegun = "^1.2.2"
ipython = "^8.11.0"
pytest = "^7.2.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
